# rgraphics

./: Cargo.toml
.github/workflows/: ci.yml
examples/: clock.rs  hello_shapes.rs  hello_triangle.rs  hello_triangles.rs  moving_image.rs  window.rs
src/: application.rs  frame.rs  gpu.rs  lib.rs  shader.wgsl  state.rs
src/graphics/: draw.rs  gpu.rs  mesh.rs  mod.rs  shader.wgsl  shader2d.wgsl
