[package]
name = "rgraphics"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
wgpu = "24.0"
cgmath = "0.18"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
image = { version = "0.25", features = [ "jpeg"] }
time = "0.3.36"

[dev-dependencies]
simplelog = "0.12"