[package]
name = "rgraphics"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
wgpu = "24.0"
glam = "0.29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [ "jpeg"] }

[dev-dependencies]
simplelog = "0.12"
chrono = "0.4"